Add support for displaying rotten tomatoes scores.
http://forum.xbmc.org/showthread.php?tid=136873

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -420,5 +420,8 @@ Please consider supporting the development of XBMC by making a donation.
 <string id="32102">Enable Network and Studio Logos on Video OSD</string>-->
 <string id="32103">Remove Network/Studios Logos on Views</string>-->
 
+<!--Rotten Tomatoes-->
+<string id="32110">Show Rating Like on Rotten Tomatoes (Movies Only)</string>
+<string id="32111">Show Also Audience Using Special Encoding</string>
 
 </strings>
